--- a/package.json
+++ b/package.json
@@ -4,34 +4,26 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
     "server": "nodemon server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@mui/material": "^5.11.12",
-    "@mui/system": "^5.11.12",
     "bad-words": "^3.0.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "express-list-endpoints": "^6.0.0",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-markdown": "^8.0.5",
-    "react-moment": "^1.1.3",
-    "react-router-dom": "^6.8.2",
     "socket.io": "^4.5.1",
-    "socket.io-client": "^4.6.1",
     "validator": "^13.7.0"
   }
 }
